# app-templates

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
blacksheep/: Dockerfile  main.py  requirements.txt
blacksheep/controllers/: users.py
blacksheep/db/: postgres.py
blacksheep_app/: .dockerignore  Dockerfile  example.env  main.py  pyproject.toml  requirements.txt  settings.py
blacksheep_app/controllers/: __init__.py  users.py
blacksheep_app/db/: postgres.py
blacksheep_app/engines/: storage.py
blacksheep_app/schemes/: users.py
db/: example.env
db/migrations/: 001_init_db.sql
db/sql_scripts/: 001_init_db.sql
django_app/: .dockerignore  Dockerfile  example.env  pyproject.toml  requirements.txt
django_app/api/: urls.py
django_app/api/users/: serializers.py  views.py
django_app/config/: settings.py  urls.py
django_app/users/: admin.py  models.py
fastapi_app/: Dockerfile  dependencies.py  example.env  main.py  pyproject.toml  requirements.txt  settings.py
fastapi_app/db/: postgres.py
fastapi_app/dependencies/: db.py
fastapi_app/engines/: storage.py  storage_with_orm.py
fastapi_app/models/: base.py  users.py
fastapi_app/routers/: __init__.py  users.py  users_with_orm.py
fastapi_app/schemes/: __init__.py  users.py
fastapi_app/services/: users.py  users_with_orm.py
litestar_app/: Dockerfile  example.env  main.py  pyproject.toml  requirements.txt  settings.py
litestar_app/controllers/: __init__.py  users.py
litestar_app/db/: postgres.py
litestar_app/dependencies/: db.py  storage.py
litestar_app/engines/: storage.py
litestar_app/schemes/: __init__.py  users.py
nginx/: nginx.conf
nginx/conf.d/: site.conf
